--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
   },
   "devDependencies": {
     "parcel": "latest"
+  },
+  "dependencies": {
+    "@tensorflow/tfjs": "^4.9.0",
+    "@tensorflow/tfjs-vis": "^1.5.1"
   }
 }
