--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@tensorflow/tfjs": "^4.9.0",
+    "@tensorflow/tfjs-backend-webgpu": "^4.10.0",
     "@tensorflow/tfjs-vis": "^1.5.1",
-    "twgl.js": "^5.5.1"
+    "twgl.js": "^5.5.3",
+    "webgpu": "^0.1.16"
   }
 }
